--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -22,7 +22,7 @@
                 </svg>
             </div>
             <div>
-                <p class="summary-title">Despesas</p>
+                <p class="summary-title">Saídas</p>
                 <p class="summary-value">{{ summary.expenses | currency:'BRL' }}</p>
             </div>
         </div>
