--- a/src/app/pages/budget-details/budget-details.html
+++ b/src/app/pages/budget-details/budget-details.html
@@ -40,7 +40,7 @@
                                  height="18"
                                  width="18"
                                  style="margin-right: 0.2rem; opacity: 0.7;"
-                            /> {{ budget.categories?.length || 0 }} categorias
+                            /> {{ b.categories?.length || 0 }} categorias
                         </span>
                         </div>
                     </div>
@@ -105,4 +105,3 @@
         <h2>Orçamento não encontrado.</h2>
     </div>
 </ng-template>
-
