feat: pix color

--- a/src/app/pages/budget-details/budget-details.html
+++ b/src/app/pages/budget-details/budget-details.html
@@ -40,7 +40,7 @@
                                  height="18"
                                  width="18"
                                  style="margin-right: 0.2rem; opacity: 0.7;"
-                            /> {{ b.categories?.length || 0 }} categorias
+                            /> {{ b.categories.length || 0 }} categorias
                         </span>
                         </div>
                     </div>
