--- a/src/app/pages/transactions-details/transactions-details.scss
+++ b/src/app/pages/transactions-details/transactions-details.scss
@@ -93,3 +93,17 @@
     border-color: #ccc !important;
     cursor: not-allowed !important;
 }
+
+.accordion-content {
+    overflow: hidden;
+    transition: max-height 0.35s cubic-bezier(0.4, 0, 0.2, 1), padding 0.2s;
+    max-height: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.accordion-content.open {
+    max-height: 1000px; /* valor grande suficiente para o conteúdo */
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
