style: text-left

--- a/src/app/components/transactions-table/transactions-table.html
+++ b/src/app/components/transactions-table/transactions-table.html
@@ -3,7 +3,7 @@
         <table>
             <thead>
             <tr>
-                <th>Descrição</th>
+                <th class="text-left">Descrição</th>
                 <th class="text-center">Data</th>
                 <th class="text-center">Categoria</th>
                 <th class="text-center">Moeda</th>
