--- a/src/app/pages/objectives/objectives.scss
+++ b/src/app/pages/objectives/objectives.scss
@@ -1,16 +1,16 @@
-
 .objectives-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 1rem;
+    justify-content: space-between;
 }
 
 .objective-card {
     background: #ffffff;
     border-radius: 10px;
     padding: 18px 16px;
-    min-width: 400px;
-    max-width: 400px;
+    min-width: 30%;
+    max-width: 30%;
     margin-bottom: 0;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.04);
     display: flex;
@@ -173,4 +173,9 @@ button {
             border-radius: 50%;
         }
     }
+}
+
+.value-input {
+    margin-right: 1.1rem;
+    min-width: 33.33%;
 }
